# otimizador_de_cv_ia

./: DOCUMENTACAO_COMPLETA.md  PULL_REQUEST_INSTRUCTIONS.md  README.md
backend/: .env.example  .gitignore  README.md  STATUS_TESTES.md  init_db.py  main.py  pyproject.toml  pytest.ini  setup_test_env.py  test_analysis.py  test_metrics_api.py
backend/app/: __init__.py  analysis.py
backend/app/agno/: __init__.py  analysis.py  analysis_engine.py  gemini_client.py  orchestrator.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/v1/endpoints/: user.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  factory.py  interfaces.py  logging.py  security.py  test_config.py
backend/app/models/: __init__.py  curriculum.py  metrics.py  user.py
backend/app/repositories/: curriculum_repository.py
backend/app/routers/: __init__.py  auth.py  curriculum.py  metrics.py
backend/app/schemas/: __init__.py  common.py  curriculum.py  metrics.py  user.py
backend/app/services/: curriculum_service.py
backend/app/utils/: __init__.py  file_utils.py  file_validator.py
backend/tests/: __init__.py  conftest.py
backend/tests/unit/: test_agno.py  test_analysis.py  test_config.py  test_database.py  test_deps.py  test_file_utils.py  test_file_validator.py  test_logging.py  test_models_curriculum.py  test_models_user.py  test_schemas_common.py  test_schemas_curriculum.py  test_schemas_metrics.py  test_schemas_user.py  test_security.py
frontend/: .env.example  .gitignore  PROJECT_CONFIG.md  README.md  index.html  package-lock.json  package.json  (+1 more)
(+28 files in other folders)
